--- a/Landmarks/Landmarks/PlaceInfo.plist
+++ b/Landmarks/Landmarks/PlaceInfo.plist
@@ -151,9 +151,9 @@
 		<key>favorite</key>
 		<false/>
 		<key>latitude</key>
-		<real>82.5</real>
+		<real>38.63891602</real>
 		<key>longitude</key>
-		<real>39.1</real>
+		<real>82.07885742000001</real>
 	</dict>
 	<key>9</key>
 	<dict>
